--- a/demo-Couch/pom.xml
+++ b/demo-Couch/pom.xml
@@ -32,10 +32,20 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.ektorp</groupId>
-			<artifactId>org.ektorp</artifactId>
-			<version>1.5.0</version>
-		</dependency>
+	<groupId>org.ektorp</groupId>
+	<artifactId>org.ektorp</artifactId>
+	<version>1.5.0</version>
+</dependency>
+
+		
+
+
+		<!-- https://mvnrepository.com/artifact/org.ektorp/org.ektorp.spring -->
+<dependency>
+    <groupId>org.ektorp</groupId>
+    <artifactId>org.ektorp.spring</artifactId>
+    <version>1.5.0</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
